--- a/inbox-assistant-frontend/index.html
+++ b/inbox-assistant-frontend/index.html
@@ -261,10 +261,13 @@
           if (textValue) formData.append("text", textValue);
           if (file) formData.append("file", file);
 
-          const response = await fetch("http://127.0.0.1:8000/classify", {
-            method: "POST",
-            body: formData,
-          });
+          const response = await fetch(
+            "https://inbox-assistant-mkt3.onrender.com/classify",
+            {
+              method: "POST",
+              body: formData,
+            }
+          );
           const data = await response.json();
 
           // Remove "Processando..."
