--- a/inbox-assistant-frontend/index.html
+++ b/inbox-assistant-frontend/index.html
@@ -110,7 +110,7 @@
             rows="1"
             placeholder="Cole seu e-mail aqui..."
             autocomplete="off"
-            class="w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom"
+            class="w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom placeholder:truncate placeholder:whitespace-nowrap"
           ></textarea>
 
           <!-- File pill -->
@@ -261,13 +261,15 @@
           if (textValue) formData.append("text", textValue);
           if (file) formData.append("file", file);
 
-          const response = await fetch(
-            "https://inbox-assistant-mkt3.onrender.com/classify",
-            {
-              method: "POST",
-              body: formData,
-            }
-          );
+          // Decide API base URL depending on environment
+          const API_URL = window.location.hostname.includes("github.io")
+            ? "https://inbox-assistant-mkt3.onrender.com" // deployed backend
+            : "http://127.0.0.1:8000"; // local backend
+
+          const response = await fetch(API_URL + "/classify", {
+            method: "POST",
+            body: formData,
+          });
           const data = await response.json();
 
           // Remove "Processando..."
