--- a/inbox-assistant-frontend/index.html
+++ b/inbox-assistant-frontend/index.html
@@ -1,115 +1,117 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inbox Assistant</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="css/styles.css" />
-  </head>
-  <body class="relative min-h-screen max-h-screen flex flex-col bg-gray-950">
-    <!-- Background blobs -->
-    <div
-      class="blob w-[75vw] h-[75vh] bg-purple-900"
-      style="top: -10vh; left: -5vw"
-    ></div>
-    <div
-      class="blob w-[80vw] h-[80vh] bg-blue-900"
-      style="bottom: -15vh; right: -10vw"
-    ></div>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Inbox Assistant</title>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="css/styles.css" />
+    </head>
+    <body class="relative min-h-screen max-h-screen flex flex-col bg-gray-950">
+        <!-- Background blobs -->
+        <div
+            class="blob w-[75vw] h-[75vh] bg-purple-900"
+            style="top: -10vh; left: -5vw"
+        ></div>
+        <div
+            class="blob w-[80vw] h-[80vh] bg-blue-900"
+            style="bottom: -15vh; right: -10vw"
+        ></div>
 
-    <!-- Header -->
-    <header class="p-6 z-10 max-w-3xl mx-auto w-full">
-      <h1 class="text-3xl font-bold text-white text-center">Inbox Assistant</h1>
-    </header>
+        <!-- Header -->
+        <header class="p-6 z-10 max-w-3xl mx-auto w-full">
+            <h1 class="text-3xl font-bold text-white text-center">
+                Inbox Assistant
+            </h1>
+        </header>
 
-    <main
-      id="resultContainer"
-      class="flex-1 min-h-0 p-6 overflow-y-scroll space-y-4 z-10 max-w-3xl mx-auto w-full"
-    >
-      <!-- Messages will appear here -->
-    </main>
+        <main
+            id="resultContainer"
+            class="flex-1 min-h-0 p-6 overflow-y-scroll space-y-4 z-10 max-w-3xl mx-auto w-full"
+        >
+            <!-- Messages will appear here -->
+        </main>
 
-    <!-- Message above input bar -->
-    <div
-      id="infoMessage"
-      class="text-center text-gray-400 mb-2 z-10 max-w-3xl mx-auto w-full px-4"
-    >
-      O Inbox Assistant analisa seus e-mails e identifica se são
-      <strong>Produtivos</strong> ou <strong>Improdutivos</strong>, sugerindo
-      respostas automáticas.
-      <div class="mt-3">
-        Insira seu e-mail abaixo ou anexe um arquivo <strong>.txt</strong> ou
-        <strong>.pdf</strong> para verificação.
-      </div>
-    </div>
-
-    <!-- Input bar -->
-    <form
-      id="emailForm"
-      action="javascript:void(0)"
-      class="p-6 z-10 max-w-3xl mx-auto w-full"
-    >
-      <div
-        class="flex items-center bg-gray-900 rounded-[28px] px-4 py-2 w-full"
-      >
-        <div class="flex-1 flex items-center space-x-2 min-w-0">
-          <!-- Textarea (hidden when file attached) -->
-          <textarea
-            id="text"
-            name="text"
-            rows="1"
-            placeholder="Cole seu e-mail aqui..."
-            autocomplete="off"
-            class="w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom placeholder:truncate placeholder:whitespace-nowrap"
-          ></textarea>
-
-          <!-- File pill -->
-          <div
-            id="filePill"
-            class="hidden flex items-center bg-gray-700 text-white rounded-full px-3 py-1 max-w-full"
-          >
-            <span id="fileName" class="truncate max-w-full"></span>
-            <button
-              type="button"
-              id="removeFile"
-              class="ml-2 text-gray-300 hover:text-white"
-            >
-              &times;
-            </button>
-          </div>
+        <!-- Message above input bar -->
+        <div
+            id="infoMessage"
+            class="text-center text-gray-400 mb-2 z-10 max-w-3xl mx-auto w-full px-4"
+        >
+            O Inbox Assistant analisa seus e-mails e identifica se são
+            <strong>Produtivos</strong> ou <strong>Improdutivos</strong>,
+            sugerindo respostas automáticas.
+            <div class="mt-3">
+                Insira seu e-mail abaixo ou anexe um arquivo
+                <strong>.txt</strong> ou <strong>.pdf</strong> para verificação.
+            </div>
         </div>
 
-        <!-- Attachment -->
-        <label class="cursor-pointer px-2 py-2 flex items-center">
-          <input
-            type="file"
-            id="file"
-            name="file"
-            accept=".txt,.pdf"
-            class="hidden"
-          />
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-6 w-6 text-gray-400 hover:text-indigo-400 transition-colors"
-            viewBox="0 -960 960 960"
-            fill="currentColor"
-          >
-            <path
-              d="M720-330q0 104-73 177T470-80q-104 0-177-73t-73-177v-370q0-75 52.5-127.5T400-880q75 0 127.5 52.5T580-700v350q0 46-32 78t-78 32q-46 0-78-32t-32-78v-370h80v370q0 13 8.5 21.5T470-320q13 0 21.5-8.5T500-350v-350q-1-42-29.5-71T400-800q-42 0-71 29t-29 71v370q-1 71 49 120.5T470-160q70 0 119-49.5T640-330v-390h80v390Z"
-            />
-          </svg>
-        </label>
-
-        <!-- Send button -->
-        <button
-          type="submit"
-          class="ml-2 bg-indigo-600 hover:bg-indigo-700 transition-colors text-white font-semibold px-4 py-2 rounded-full"
+        <!-- Input bar -->
+        <form
+            id="emailForm"
+            action="javascript:void(0)"
+            class="p-6 z-10 max-w-3xl mx-auto w-full"
         >
-          Enviar
-        </button>
-      </div>
-    </form>
-    <script src="js/app.js"></script>
-  </body>
+            <div
+                class="flex items-center bg-gray-900 rounded-[28px] px-4 py-2 w-full"
+            >
+                <div class="flex-1 flex items-center space-x-2 min-w-0">
+                    <!-- Textarea (hidden when file attached) -->
+                    <textarea
+                        id="text"
+                        name="text"
+                        rows="1"
+                        placeholder="Cole seu e-mail aqui..."
+                        autocomplete="off"
+                        class="w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom placeholder:truncate placeholder:whitespace-nowrap"
+                    ></textarea>
+
+                    <!-- File pill -->
+                    <div
+                        id="filePill"
+                        class="hidden flex items-center bg-gray-700 text-white rounded-full px-3 py-1 max-w-full"
+                    >
+                        <span id="fileName" class="truncate max-w-full"></span>
+                        <button
+                            type="button"
+                            id="removeFile"
+                            class="ml-2 text-gray-300 hover:text-white"
+                        >
+                            &times;
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Attachment -->
+                <label class="cursor-pointer px-2 py-2 flex items-center">
+                    <input
+                        type="file"
+                        id="file"
+                        name="file"
+                        accept=".txt,.pdf"
+                        class="hidden"
+                    />
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6 text-gray-400 hover:text-indigo-400 transition-colors"
+                        viewBox="0 -960 960 960"
+                        fill="currentColor"
+                    >
+                        <path
+                            d="M720-330q0 104-73 177T470-80q-104 0-177-73t-73-177v-370q0-75 52.5-127.5T400-880q75 0 127.5 52.5T580-700v350q0 46-32 78t-78 32q-46 0-78-32t-32-78v-370h80v370q0 13 8.5 21.5T470-320q13 0 21.5-8.5T500-350v-350q-1-42-29.5-71T400-800q-42 0-71 29t-29 71v370q-1 71 49 120.5T470-160q70 0 119-49.5T640-330v-390h80v390Z"
+                        />
+                    </svg>
+                </label>
+
+                <!-- Send button -->
+                <button
+                    type="submit"
+                    class="ml-2 bg-indigo-600 hover:bg-indigo-700 transition-colors text-white font-semibold px-4 py-2 rounded-full"
+                >
+                    Enviar
+                </button>
+            </div>
+        </form>
+        <script src="js/app.js"></script>
+    </body>
 </html>
