Fix ugly scrollbar on chrome

--- a/inbox-assistant-frontend/index.html
+++ b/inbox-assistant-frontend/index.html
@@ -27,7 +27,7 @@
 
         <main
             id="resultContainer"
-            class="flex-1 min-h-0 p-6 overflow-y-scroll space-y-4 z-10 max-w-3xl mx-auto w-full"
+            class="flex-1 min-h-0 p-6 overflow-y-scroll space-y-4 z-10 max-w-3xl mx-auto w-full styled-scrollbars"
         >
             <!-- Messages will appear here -->
         </main>
@@ -63,7 +63,7 @@
                         rows="1"
                         placeholder="Cole seu e-mail aqui..."
                         autocomplete="off"
-                        class="w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom placeholder:truncate placeholder:whitespace-nowrap"
+                        class="styled-scrollbars w-full bg-transparent text-white px-3 py-2 focus:outline-none resize-none align-bottom placeholder:truncate placeholder:whitespace-nowrap"
                     ></textarea>
 
                     <!-- File pill -->
